# apc40mk2-bridge

./: .gitignore  LICENSE  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/midi/: bridge.rs  mod.rs  stream_test.rs  sysex.rs
